fixed some slide layout issues.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -471,6 +471,7 @@ header {
       width: 100%;
       letter-spacing: 0px;
       color: $light;
+      text-shadow: 2px 2px 10px #000000;
       h1, h3 {
         &.object-title {
           text-transform: uppercase;
@@ -490,6 +491,7 @@ header {
 
       .object-info {
         font-size: 14px;
+        text-shadow: 2px 2px 10px #000000;
         a {
           color: $light;
           &:hover {
